<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hubbub</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Navigation -->
    <string name="sign_up">Sign Up</string>
	<string name="login">Login</string>
	<string name="search_prompt">What interests you?</string>
	<string name="search_hint"></string>
	
	<!-- Titles -->
	<string name="title_user_friends">Following:</string>
	<string name="title_favorite_hub">Most Visited Hub:</string>
	
	<!-- Defaults on Widgets -->
	<string name="default_event_name">Best Day Ever</string>
	<string name="default_event_location">Zach\'s House</string>	
	<string name="default_event_time">12/15/2014 12:00pm</string>
	<string name="default_user_fullname">John Doe</string>
	<string name="default_user_username">ThatGuy2014</string>
	<string name="default_user_details">I love going to Bullwinkles every friday.</string>
	<string name="default_hub_name">DefaultHub</string>
	
	<!-- Defaults on Data Creation -->
	<string name="username">Username</string>
	<string name="firstname">First Name</string>
	<string name="lastname">Last Name</string>
	<string name="password">Password</string>
	<string name="authpassword">Confirm Password</string>
	<string name="dateofbirth">DOB - mm/dd/yyyy</string>
	<string name="email">Email</string>
	<string name="details">Tell us about you.</string>
	<string name="setpicdesc">Set Profile Picture</string>
	<string name="menu_create_event">Create Event</string>
	<string name="menu_search_event">Search Event</string>
	<string name="logout">Logout</string>
	<string name="user_details">User Details</string>
	<string name="date_and_time">Date and Time</string>
	<string name="create_user">Create User Account</string>
	
	<!-- Defaults on Create Event -->
	<string name="event_name">Bub Name</string>
    <string name="event_details">Details for event:</string>
	<string name="create_bub">Create Bub</string>
    <string name="bub_location">Location</string>
    <string name="bub_start_time"> Start Time</string>
    <string name="bub_end_time">End Time</string>
    <string name="bub_start_date">Start Date</string>
    <string name="bub_end_date">End Date</string>
    <string name="text_pingIn">Choose Ping In time</string>
    <string name="Privacy">Privacy</string>
    <string name="bub_tag">Tag</string>
    <string name="text_public">Public</string>
     <string name="text_private">Private</string>
	
     <!-- pingIn Strings -->
    <string name="YES">Yes</string>
	<string name="No">No</string>
	<string name="Maybe">Maybe</string>
	<string name="Attending">Are you still coming ?</string>
     
     
     <!--  Following Events -->
     <string name="following">Following:</string>
     <string name="standard_time_text">Time</string>
     <string name="textview_tags_header">Tags go here</string>
     <string name="follow_event">Follow Event</string>
     <string name="unfollow">Unfollow Event</string>
     <string name="event_followers_default">No Followers</string>
     <string name="num_following">0</string>
     <string name="tapp_in_header">Tapp-In Time:</string>
     <string name="event_tags">Tags:</string>
      <string name="event_details_default">No Details</string>
     
</resources>
