<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/eventview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventlist_start_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/event_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventlist_followingheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/event_image"
        android:layout_alignLeft="@+id/eventlist_start_time"
        android:text="@string/following"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventlist_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eventlist_followingheader"
        android:layout_toRightOf="@+id/event_image"
        android:text="@string/bub_start_time" />

    <TextView
        android:id="@+id/eventlist_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventview_name"
        android:layout_toRightOf="@+id/event_image"
        android:text="@string/bub_location"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventview_tappin_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventview_tappin_header"
        android:layout_alignBottom="@+id/eventview_tappin_header"
        android:layout_alignLeft="@+id/eventlist_followingheader"
        android:text="@string/standard_time_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_alignLeft="@+id/eventview_tappin_header"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/eventview_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventview_tag_header"
        android:layout_alignBottom="@+id/eventview_tag_header"
        android:layout_alignRight="@+id/eventlist_details1"
        android:layout_toRightOf="@+id/eventview_tag_header"
        android:text="@string/textview_tags_header"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventlist_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eventlist_start_time"
        android:layout_alignLeft="@+id/eventlist_start_time"
        android:layout_marginRight="20dp"
        android:text="@string/bub_start_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventlist_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eventlist_start_time"
        android:layout_alignRight="@+id/eventview_tags"
        android:layout_marginRight="20dp"
        android:text="@string/bub_end_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventlist_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eventlist_numfollowers"
        android:layout_alignRight="@+id/eventlist_end_date"
        android:text="@string/bub_end_time" />

    <Button
        android:id="@+id/eventview_button_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventlist_details1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/eventlist_details1"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_lightblue"
        android:text="@string/follow_event" />

    <Button
        android:id="@+id/eventview_button_unfollow"
        android:layout_width="wrap_content"
        android:background="@drawable/button_teal"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventview_button_follow"
        android:layout_alignBottom="@+id/eventview_button_follow"
        android:layout_alignLeft="@+id/eventview_button_follow"
        android:layout_alignRight="@+id/eventview_button_follow"
        android:text="@string/unfollow" />

    <TextView
        android:id="@+id/eventview_following_list"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/eventlist_details1"
        android:layout_alignRight="@+id/eventlist_details1"
        android:layout_below="@+id/eventlist_details1"
        android:layout_marginTop="25dp"
        android:background="@drawable/edittext_openblue"
        android:paddingLeft="6sp"
        android:text="@string/event_followers_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_alignLeft="@+id/eventlist_details1"
        android:layout_below="@+id/eventlist_details1"
        android:text="@string/following"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventlist_numfollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_above="@+id/eventview_tappin_header"
        android:layout_toRightOf="@+id/eventlist_start_time"
        android:text="@string/num_following"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventview_tappin_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventview_tag_header"
        android:layout_below="@+id/event_image"
        android:text="@string/tapp_in_header"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventview_tag_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/eventview_tappin_header"
        android:text="@string/event_tags"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventlist_details1"
        android:layout_below="@+id/eventview_tags"
        android:layout_marginTop="15dp"
        android:text="@string/event_details"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventlist_details1"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/TextView01"
        android:background="@drawable/edittext_closedblue"
        android:paddingLeft="6sp"
        android:text="@string/event_details_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventview_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_alignLeft="@+id/eventview_following_list"
        android:layout_below="@+id/eventview_following_list"
        android:text="@string/YES"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventview_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_alignBaseline="@+id/eventview_yes"
        android:layout_alignBottom="@+id/eventview_yes"
        android:layout_alignRight="@+id/eventview_following_list"
        android:text="@string/No"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventview_maybe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventview_yes"
        android:layout_alignBottom="@+id/eventview_yes"
        android:layout_centerHorizontal="true"
        android:text="@string/Maybe"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/eventview_num_maybe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventview_num_yes"
        android:layout_alignBottom="@+id/eventview_num_yes"
        android:layout_centerHorizontal="true"
        android:text="@string/num_following"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/eventview_num_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventview_no"
        android:layout_below="@+id/eventview_no"
        android:text="@string/num_following"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/eventview_num_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventview_num_no"
        android:layout_alignBottom="@+id/eventview_num_no"
        android:layout_alignLeft="@+id/eventview_yes"
        android:text="@string/num_following"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
